# cronbuddy

./: .pre-commit-config.yaml  README.md  app.py  build_app.sh  cron_manager.py  logger.py  menubar.py  pyproject.toml  requirements.txt  script_manager.py  setup.py  template_manager.py  ui_components.py
.github/workflows/: ci.yml
tests/: test_cron_manager.py  test_script_manager.py  test_template_manager.py
